k8s_deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttyd-k9s
  namespace: ttyd-k9s
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /k9s(/|$)(.*)
            backend:
              service:
                name: ttyd-k9s
                port:
                  number: 7681
